Fix animal counts region alignment

--- a/bvspca/static/sass/components/_page-home.scss
+++ b/bvspca/static/sass/components/_page-home.scss
@@ -182,7 +182,7 @@ $animal-count-break: 600px;
   flex-direction: column;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  align-content: center;
+  align-items: center;
   font-size: 1.3rem;
   font-weight: 600;
   color: $heading-gray-color;
